[package]
name = "buthesda-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
sysinfo = "0.21"
winapi = { version = "0.3", features = [
    "processsnapshot",
    "processthreadsapi",
    "memoryapi",
    "psapi",
    "tlhelp32",
    "errhandlingapi",
] }
