[package]
name = "butthesda-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.21"
winapi = { version = "0.3", features = [
    "processsnapshot",
    "processthreadsapi",
    "memoryapi",
    "psapi",
    "tlhelp32",
    "errhandlingapi",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.14", features = [
    "fs",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
    "io-util"
] }
tokio-stream = { version = "0.1", features = ["sync"] }
anyhow = "1.0"
iced = "0.3"
iced_futures = { version = "0.3", features = ["tokio"] }
iced_native = "0.4"
futures = { version = "0.3" }
buttplug = "5.1"
lazy_static = "1.4"
async-trait = "0.1"
